# TensorCrab

./: CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  agents.md  vercel.json
.claude/: CLAUDE.md
.github/workflows/: bench.yml.old  ci.yml  coverage.yml  labeler.yml  pr-auto-tag.yml  release.yml  security.yml  wasm.yml
crates/tensor-crab/: Cargo.toml  README.md  build.rs
crates/tensor-crab/examples/: linear_regression.rs  xor.rs
crates/tensor-crab/src/: device.rs  error.rs  lib.rs
crates/tensor-crab/src/autograd/: engine.rs  graph.rs  mod.rs  ops.rs  variable.rs
crates/tensor-crab/src/cuda/: buffer.rs  cublas.rs  device.rs  error.rs  ffi.rs  half.rs  kernels.rs  mod.rs  module.rs  ops.rs  pool.rs  stream.rs
crates/tensor-crab/src/nn/: activations.rs  batchnorm.rs  conv.rs  dropout.rs  linear.rs  loss.rs  mod.rs  sequential.rs
crates/tensor-crab/src/optim/: adam.rs  adamw.rs  dataloader.rs  mod.rs  scheduler.rs  sgd.rs
crates/tensor-crab/src/tensor/: data.rs  mod.rs  ops.rs  shape.rs
docs/: architecture.md  plan.md  roadmap.md  what.is.md
website/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  postcss.config.js  sidebars.js  sidebars.ts
website/docs/: architecture.md  autograd.md  dataloader.md  getting-started.md  intro.md  nn.md  optim.md  roadmap.md  tensor.md
website/docs/api/: nn.md  optim.md  tensor.md  variable.md
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css  index.tsx
