[package]
name = "tensor-crab"
version = "0.1.1"
edition = "2021"
description = "Rust-native ML library. No Python. No GIL. Just speed."
license = "Apache-2.0"
build = "build.rs"

[features]
## Enable NVIDIA CUDA GPU acceleration.
##
## Requires:
## - An NVIDIA GPU with CUDA Compute Capability ≥ 5.0
## - CUDA Toolkit installed (tested with CUDA 11.x / 12.x)
## - `CUDA_PATH` or `CUDA_ROOT` environment variable set if CUDA is not in
##   `/usr/local/cuda`
##
## Usage:
## ```
## cargo build --features cuda
## ```
cuda = []

[dependencies]
thiserror = "2.0"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
approx = "0.5"
